@@ -219,7 +219,7 @@ private:
 	treeview_operations_Columns treeview_operations_columns;
 	
 	//usefull variables which are used by many different functions...
-	bool any_logic,any_extended;//used in some checks 
+	bool any_extended;//used in some checks 
 	unsigned short primary_count ;//primary_count checks for max. of 4 pimary partitions
 	unsigned short new_count;//new_count keeps track of the new created partitions
 	Glib::ustring str_temp ; //mostly used for constructing dialogmessages
