@@ -1,3 +1,11 @@
+2006-02-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: it shouldn't be possible to remove an extended
+	  partition which contains logicals.
+	* src/TreeView_Detail.cc: only show mountpoint column when there is
+	  mountinfo.
+
 2006-02-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* include/Win_GParted.h,
